--- a/style.css
+++ b/style.css
@@ -2,11 +2,93 @@
 
 body{
     /* Default font size, equals 1rem */
-    font-size: 20xp;
+    font-size: 12xp;
+    font-family: segoe UI;
+    color: #b3956b;
+    background-color: #e5f0ff;
+
+    margin-top: 40px;
+    margin-left: 50px;
 }
 
 h1 {
-    font-size: 2rem;
+    /* Have another comment*/
+    font-size: 5rem;
+    font-weight: 600;
+    text-align: left;
+}
+
+h2 {
+    font-size: 5rem;
+    font-weight: 400;
+    text-align: left;
+    width: 562px;
+}
+
+h3 {
+    font-size: 1.5rem;
+    text-align: left;
+}
+
+p {
+    text-align: justify;
+    width: 562px;
+}
+
+/* For menu button highlight*/
+
+#menuBar {
+    margin-top: 50px;
+    margin-right: 50px;
+
+    border-style: solid none;
+    border-width: 3px;
+    border-color: #b3956b;
+}
+
+.btn {
+    font-size: 1.5rem;
     text-align: center;
-    background-color: red;
+    color: #b3956b;
+
+    border: none;
+    outline: none;
+
+    display: inline-block;
+    width: 280px;
+    padding-top: 10px;    
+    padding-bottom: 10px;
+    background-color: #e5f0ff;
+    cursor: pointer;
+}
+
+.active, .btn:hover {
+    background-color: #edf5ff;
+}
+
+/* For menu sticky */
+
+.sticky {
+    position: fixed;
+}
+
+/* Paragraph Elements*/
+
+#chapterSpace {
+    border: solid;
+    border-width: 2px;
+    border-color: white;
+
+    margin-right: 50px;
+    margin-top: 500px;
+    margin-bottom: 100px;
+}
+
+#diagramSpace {
+    border: solid;
+    border-width: 2px;
+    border-color: black;
+    
+    height: 300px;
+    width: 100%;
 }
