--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ html {
 body {
     font-size: 12xp;
     font-family: segoe UI;
+
     color: #b3956b;
     background-color: #e5f0ff;
 
@@ -18,6 +19,7 @@ body {
 h1 {
     font-size: 5rem;
     font-weight: 600;
+
     text-align: left;
     padding-bottom: 30px;
 }
@@ -25,6 +27,7 @@ h1 {
 h2 {
     font-size: 5rem;
     font-weight: 400;
+
     text-align: left;
     width: 562px;
 }
@@ -32,11 +35,14 @@ h2 {
 h3 {
     font-size: 1.5rem;
     text-align: left;
+
     padding-top: 100px;
 }
 
 p {
     text-align: justify;
+    line-height: 1.2;
+    
     padding-top: 20px;
     width: 562px;
 }
@@ -53,12 +59,14 @@ p {
     outline: none;
 
     display: inline-block;
+
     width: 230px;
     padding-left: 10px;
     padding-right: 0px;
     padding-top: 10px;    
     padding-bottom: 10px;
     background-color: #e5f0ff;
+
     cursor: pointer;
     transition: 0.3s;
 }
@@ -79,6 +87,7 @@ p {
 
 #margin {
     background-color: #e5f0ff;
+
     border-style: solid none;
     border-width: 3px;
     border-color: #b3956b;
@@ -156,6 +165,7 @@ p {
     border-right: 30px solid #b3956b;
     border-bottom: 25px solid transparent;  
     margin-right: 20px;
+
     cursor: pointer;
 }
 
@@ -169,7 +179,8 @@ p {
     border-top: 25px solid transparent;
     border-left: 30px solid #b3956b;
     border-bottom: 25px solid transparent;  
-    margin-left: 20px; 
+    margin-left: 20px;
+
     cursor: pointer;
 }
 
